first db revision done

--- a/compose.yml
+++ b/compose.yml
@@ -24,21 +24,32 @@ services:
       - redis_data:/data
     restart: unless-stopped
 
+  fill_db:
+    build:
+      context: .
+    env_file:
+      - .env
+    depends_on:
+      postgres:
+        condition: service_started
+      alembic:
+        condition: service_started
+    command: python -m services.fill_db
+    restart: no
+
   backend:
     build:
       context: .
     env_file:
       - .env
     depends_on:
-      alembic:
-        condition: service_started
-      postgres:
-        condition: service_started
       redis:
         condition: service_started
+      fill_db:
+        condition: service_completed_successfully
     command: python -m services.backend
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://backend:8000/health"]
+      test: ["CMD", "curl", "-f", "http://backend:8000/api/health"]
       interval: 30s
       timeout: 5s
       retries: 3
@@ -55,7 +66,8 @@ services:
     env_file:
       - .env
     depends_on:
-      - postgres
+      postgres:
+        condition: service_started
 
   frontend:
     build:
@@ -64,7 +76,7 @@ services:
       - .env
     depends_on:
       backend:
-        condition: service_started
+        condition: service_healthy
     profiles:
       - with_frontend
     restart: unless-stopped
@@ -75,8 +87,8 @@ services:
       - ./services/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./logs/nginx:/var/log/nginx/
     depends_on:
-      frontend:
-        condition: service_started
+      backend:
+        condition: service_healthy
     profiles:
       - with_frontend
     restart: unless-stopped
