--- a/compose.traefik.yml
+++ b/compose.traefik.yml
@@ -4,10 +4,10 @@ services:
       - ${NGINX_PORT}:80
     labels: 
       - traefik.enable=true
-      - traefik.http.services.${NETWORK_NAME}.loadbalancer.server.port=80
-      - traefik.http.routers.${NETWORK_NAME}.rule=Host(`${DOMAIN}.w1vern.space`)
-      - traefik.http.routers.${NETWORK_NAME}.entrypoints=https
-      - traefik.http.routers.${NETWORK_NAME}.tls.certresolver=letsEncrypt
+      - traefik.http.services.${SUBDOMAIN}.loadbalancer.server.port=80
+      - traefik.http.routers.${SUBDOMAIN}.rule=Host(`${SUBDOMAIN}.${DOMAIN}`)
+      - traefik.http.routers.${SUBDOMAIN}.entrypoints=https
+      - traefik.http.routers.${SUBDOMAIN}.tls.certresolver=letsEncrypt
     networks:
       default:
       traefik_external_network:
