--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "uvicorn>=0.32.0",
     "asyncpg>=0.30.0",
     "alembic>=1.14.0",
-    "pydantic-settings>=2.8.1"
+    "pydantic-settings>=2.8.1",
+    "bcrypt>=5.0.0",
 ]
 
 [dependency-groups]
