fill_db service done

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ REDIS_BOT=1
 BACKEND_SECRET=YOUR_SECRET
 BACKEND_WORKERS=1
 
+SUPERUSER_EMAIL=
+SUPERUSER_USERNAME=
+SUPERUSER_PASSWORD=
+
 RANKING_BETA=
 RANKING_TAU=
 RANKING_SIGMA=
